<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoListFragment" >

    <TextView
        android:id="@+id/textViewTaskNumOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/taskNumLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTask"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskNumOut">

        <TextView
            android:id="@+id/textViewUpTaskLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upTask"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="10dp"
            android:translationY="10dp" />

        <TextView
            android:id="@+id/textViewTaskNameOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noneLabel"
            android:textSize="16sp"
            android:translationX="10dp"
            android:translationY="50dp" />

        <TextView
            android:id="@+id/textViewDateOutCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:translationX="10dp"
            android:translationY="75dp" />

        <TextView
            android:id="@+id/textViewPriorityOutCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="275dp"
            android:translationY="75dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonViewTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/viewTaskLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTask" />

    <Button
        android:id="@+id/buttonCreateTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/createTaskLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewTask" />
</androidx.constraintlayout.widget.ConstraintLayout>